tests/test_errors.cyx
int x = ;  // Error: the value of x

if (x > 5 { // error: missing ')'
    printf("erro");
}

float y = 3.14 // Error: Missing ';'